tests/fail/main_too_many_args/test.yp
i32 fn main(byte@[] args, i32 x) {
    ret 0;
}
